--- a/index.html
+++ b/index.html
@@ -14,7 +14,15 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Open+Sans:wght@500&display=swap"
     rel="stylesheet">
-    <link rel="stylesheet" href="style.css" />
+  <!-- jd delivr cdn -->
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"></script>
+  <!--font awesome cdn-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
@@ -31,12 +39,12 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
+      <ul class="navbar-nav mr-auto fs-6" id="navbar-items-id">
         <li class="nav-item active">
-          <a class="nav-link" href="#" id="nav-items">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="#hero__container1" id="nav-items">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#" id="nav-items">About Us</a>
+          <a class="nav-link" href="#card__container" id="nav-items">About Us</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#" id="nav-items">Carrers</a>
@@ -44,7 +52,8 @@
         <div class="dropdown">
 
           <!-- Dropdown button -->
-          <button type="button" class="dropdown-toggle nav-dropdown pt-lg-2 ps-lg-2" id="nav-items" data-toggle="dropdown" >
+          <button type="button" class="dropdown-toggle nav-dropdown pt-lg-2 ps-lg-2" id="nav-items"
+            data-toggle="dropdown">
             Service
             <a href="javascript:void(0);" class="icon">
 
@@ -55,19 +64,254 @@
 
           <!-- Dropdown options -->
           <div class="dropdown-menu mt-lg-4">
-            <a class="dropdown-item" href="#">Ambal Pharmacy(ponnamaravathi)</a>
-            <a class="dropdown-item" href="#">Ambal Pharmacy(Kovaipudur)</a>
-            <a class="dropdown-item" href="#">Ambal Pharmacy(ponnamaravathi)</a>
+            <a class="dropdown-item" href="#card__container__element">Ambal Pharmacy(ponnamaravathi)</a>
+            <a class="dropdown-item" href="#card__container__element">Ambal Pharmacy(Kovaipudur)</a>
+            <a class="dropdown-item" href="#card__container__element">Ambal Pharmacy(ponnamaravathi)</a>
             <a class="dropdown-item" href="#">Ambal Complex(Kovaipudur)</a>
           </div>
         </div>
       </ul>
     </div>
   </nav>
-  <!-- jd delivr cdn -->
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"></script>
+
+  <!-- main -->
+  <section id="hero__container">
+    <section class="d-md-flex flex-row-reverse carousel m-0" id="hero__container1">
+      <section class="carouselImage me-md-2">
+        <div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block w-100 carousel-item-img" src="images/logo.svg" alt="First slide">
+              <!-- <div class="carousel-caption d-none d-md-block">
+                <img src="images/logo.svg" class="carousel-caption-img" alt="logo">
+              </div> -->
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100 carousel-item-img" src="images/Ambal Complex1.png" alt="First slide">
+              <!-- <div class="carousel-caption d-none d-md-block">
+                <img src="images/logo.svg" class="carousel-caption-img" alt="logo">
+              </div> -->
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100 carousel-item-img" src="images/sliderimage1.jpg" alt="Second slide">
+              <!-- <div class="carousel-caption d-none d-md-block">
+                <img src="images/logo.svg" class="carousel-caption-img" alt="logo">
+              </div> -->
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100 carousel-item-img" src="images/medical Image2.png" alt="Third slide">
+              <!-- <div class="carousel-caption d-none d-md-block">
+                <img src="images/logo.svg" class="carousel-caption-img" alt="logo">
+              </div> -->
+            </div>
+          </div>
+          <a class="carousel-control-prev" id="previous" href="#carouselExampleIndicators" role="button"
+            data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+      </section>
+      <section class="carouselContent d-flex justify-content-center align-items-center">
+        <h6 class="mt-4 mt-md-0 ms-md-4" id="carouselContent__text">Your Loved Ones Deserve Only The Best</h6>
+      </section>
+    </section>
+    <section id="card__container" class="d-md-flex gap-3">
+      <div class="card mt-0 mt-md-4 mt-lg-5" id="card__container__element">
+        <div class="inner">
+          <img class="card-img-top" src="images/Medicalimage3.webp" alt="Card image cap" class="card__image1">
+        </div>
+        <img class="card-img-bottom" src="images/logo1.png">
+        <div class="card-body text-center">
+          <h5 class="card-title fs-4 fw-bold" id="card-title-medical">SRI AMBAL MEDICALS & STATIONERY</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+            content.</p>
+          <!--card button1-->
+          <div class="card-buttons">
+            <a href="https://www.google.com/maps/place/SRI+AMBAL+MEDICALS+%26+STATIONERY/@10.9439342,76.9309044,17z/data=!3m1!4b1!4m6!3m5!1s0x3ba85b930fceb417:0x3937b357c052e7a6!8m2!3d10.9439342!4d76.9334793!16s%2Fg%2F1tgf66nc?authuser=0&entry=ttu"
+              target="_blank" class="btn border border-danger rounded p-2 me-3" id="card-buttons-location">
+              <i class="fa-sharp fa-solid fa-location-dot fa-xl" style="color: #dc1818;"></i>
+            </a>
+            <!-- Button trigger modal -->
+            <button type="button" class="btn border border-success rounded p-2" id="card-buttons-address"
+              data-toggle="modal" data-target="#exampleModal">
+              <i class="fa-regular fa-address-book fa-xl" style="color: #16d908;"></i>
+            </button>
+
+            <!-- Modal -->
+            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+              aria-hidden="true">
+              <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                  <div class="modal-body">
+                    ...
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+      <div class="card mt-2 mt-md-4 mt-lg-5" id="card__container__element">
+        <div class="inner">
+          <img class="card-img-top" src="images/medicalimage5.jpg" alt="Card image cap" class="card__image1">
+        </div>
+        <img class="card-img-bottom" src="images/logo1.png">
+        <div class="card-body  text-center">
+          <h5 class="card-title fs-4 fw-bold" id="card-title-medical">SRI AMBAL MEDICALS</h5>
+          <p class="card-text" id="card-text2">Some quick example text to build on the card title and make up the bulk
+            of the card's
+            content.</p>
+          <!--button2-->
+          <div class="card-buttons">
+            <a href="https://www.google.com/maps/place/New+Ambal+Medicals+%26+Stationery/@10.929458,76.9274263,17z/data=!3m1!4b1!4m6!3m5!1s0x3ba85ba2c323ab07:0x3252489a9a3a8af7!8m2!3d10.929458!4d76.9274263!16s%2Fg%2F11f5_fqpt1?authuser=0&entry=ttu"
+              target="_blank" class="btn border border-danger rounded p-2 me-3" id="card-buttons-location">
+              <i class="fa-sharp fa-solid fa-location-dot fa-xl" style="color: #dc1818;"></i>
+            </a>
+            <!-- Button trigger modal -->
+            <button type="button" class="btn border border-success rounded p-2" id="card-buttons-address"
+              data-toggle="modal" data-target="#exampleModal">
+              <i class="fa-regular fa-address-book fa-xl" style="color: #16d908;"></i>
+            </button>
+
+
+            <!-- Modal -->
+            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+              aria-hidden="true">
+              <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                  <div class="modal-body">
+                    ...
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="card mt-2 mt-md-4 mt-lg-5" id="card__container__element">
+        <div class="inner">
+          <img class="card-img-top" src="images/medical Image1.avif" alt="Card image cap" class="card__image1">
+        </div>
+        <img class="card-img-bottom" src="images/logo1.png">
+        <div class="card-body text-center">
+          <h5 class="card-title fs-4 fw-bold" id="card-title-medical">New Ambal Medicals & Stationery</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+            content.</p>
+          <!--button3-->
+          <div class="card-buttons">
+            <a href="https://www.google.com/maps/place/Ambal+Medical/@10.2776271,78.5414605,17z/data=!3m1!4b1!4m6!3m5!1s0x3b0085b5091993b7:0xdb9766cb600d7862!8m2!3d10.2776271!4d78.5414605!16s%2Fg%2F11gh492bnn?authuser=0&entry=ttu"
+              target="_blank" class="btn border border-danger rounded p-2 me-3" id="card-buttons-location">
+              <i class="fa-sharp fa-solid fa-location-dot fa-xl" style="color: #dc1818;"></i>
+            </a>
+            <!-- Button trigger modal -->
+            <button type="button" class="btn border border-success rounded p-2" id="card-buttons-address"
+              data-toggle="modal" data-target="#exampleModal">
+              <i class="fa-regular fa-address-book fa-xl" style="color: #16d908;"></i>
+            </button>
+            <!-- Modal -->
+            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+              aria-hidden="true">
+              <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                  <div class="modal-body">
+                    ...
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!--complex-->
+    <section class="complex__container">
+    <div class="card mt-2 mt-md-4 mt-lg-5" id="card__container__element1">
+      <div class="carousel slide" id="complex__container__slider" data-ride="carousel">
+        <div class="carousel-inner" id="complex__container__carousel-inner">
+          <div class="carousel-item active complex__container__carousel-item" >
+            <div class="inner">
+              <img src="images/complex images/compleximage1.webp" alt="" class="d-block complex__container__carousel-image">
+            </div>
+            <div class="carousel-caption complex__container__logo">
+              <img src="images/logo1.png" class="complex__container__logoimage" alt="logo">
+            </div>
+          </div>
+          <div class="carousel-item complex__container__carousel-item">
+            <div class="inner">
+              <img src="images/complex images/compleximage1.webp" alt="" class="d-block complex__container__carousel-image">
+            </div>
+            <div class="carousel-caption  complex__container__logo">
+              <img src="images/logo1.png" class="complex__container__logoimage" alt="logo">
+            </div>
+          </div>
+          <div class="carousel-item complex__container__carousel-item">
+            <div class="inner">
+              <img src="images/complex images/compleximage1.webp" alt="" class="d-block complex__container__carousel-image">
+            </div>
+            <div class="carousel-caption complex__container__logo ">
+              <img src="images/logo1.png" class="complex__container__logoimage" alt="logo">
+            </div>
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#complex__container__slider" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#complex__container__slider" role="button" data-slide="next">
+          <span class="carousel-control-next-icon"  aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+    </section>
+  </section>
 
   <script>
 
