--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Open+Sans:wght@500&display=swap"
-    rel="stylesheet">
   <!-- jd delivr cdn -->
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
@@ -79,8 +76,48 @@
   <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"
     aria-hidden="true">
     <div class="modal-dialog modal-lg">
-      <div class="modal-content">
-        ...
+      <div class="modal-content p-5" >
+        <p>
+          Welcome to "AmbalPharmacy" your trusted neighborhood pharmacy dedicated to providing exceptional healthcare
+          services and personalized care. We understand that your health and well-being are of utmost importance, and
+          our team of experienced pharmacists and staff are here to support you every step of the way.
+        </p>
+
+        <p>
+          At "AmbalPharmacy", we strive to create a warm and welcoming environment where you can feel comfortable
+          discussing your healthcare needs. Whether you're seeking prescription medications, over-the-counter products,
+          or expert advice, our knowledgeable team is always ready to assist you with a smile.
+        </p>
+
+        <p>We take pride in offering a comprehensive range of pharmaceutical services to meet your diverse needs. Our
+          pharmacy stocks a wide selection of high-quality medications, including generics and brand-name drugs,
+          ensuring that you have access to the medications prescribed by your healthcare provider. We are committed to
+          maintaining the highest standards of safety and accuracy, so you can have peace of mind knowing that your
+          prescriptions will be filled with care and precision.</p>
+
+        <p>Beyond medication dispensing, we offer various healthcare services designed to promote your well-being. Our
+          team is available to provide medication counseling, ensuring that you understand the proper usage, potential
+          side effects, and interactions of your medications. We also offer medication therapy management, helping you
+          optimize your drug therapy and achieve the best possible health outcomes.
+        </p>
+        <p>As part of our commitment to community health, we actively collaborate with healthcare professionals,
+          clinics,
+          and hospitals to ensure seamless coordination of your care. We believe in fostering strong relationships with
+          our customers and healthcare providers, enabling us to provide personalized and holistic care tailored to your
+          unique needs.</p>
+
+        <p>In addition to pharmaceutical services, we offer a wide range of healthcare products, including vitamins,
+          supplements, personal care items, and more. Our store is carefully stocked with top-quality products from
+          trusted brands, promoting wellness and helping you lead a healthier lifestyle.
+        </p>
+        <p>At Ambal Pharmacy, we value your time and convenience. We offer convenient prescription refills, online
+          prescription management, and home delivery services, ensuring that your healthcare needs are met with ease.
+          Our friendly staff is always available to answer your questions and provide the support you need.</p>
+
+        <p> Thank you for choosing Ambal Pharmacy as your healthcare partner. We are dedicated to being your reliable
+          source for all your pharmaceutical and wellness needs. Your health is our priority, and we look forward to
+          serving you and your family with care, compassion, and expertise.
+        </p>
       </div>
     </div>
   </div>
@@ -145,12 +182,12 @@
         <div class="card-body text-center">
           <h5 class="card-title fs-4 fw-bold" id="card-title-medical">SRI AMBAL MEDICALS & STATIONERY</h5>
           <p class="card-text ">
-            <ul class="list-group">
-              <li class="list-group-item">Medicines</li>
-              <li class="list-group-item">Stationeries</li>
-              <li class="list-group-item">E-Seva</li>
-              <li class="list-group-item">Mobile Accessories</li>
-            </ul>
+          <ul class="list-group">
+            <li class="list-group-item">Medicines</li>
+            <li class="list-group-item">Stationeries</li>
+            <li class="list-group-item">E-Seva</li>
+            <li class="list-group-item">Mobile Accessories</li>
+          </ul>
           </p>
           <!--card button1-->
           <div class="card-buttons">
@@ -177,15 +214,14 @@
                   <div class="modal-header">
                     <h5 class="modal-title pharmacymodal-title" id="exampleModalLabel">SRI AMBAL MEDICALS & STATIONERY
                     </h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                      <span aria-hidden="true">&times;</span>
+                    <button type="button" class="btn-close" data-dismiss="modal" aria-label="Close">
                     </button>
                   </div>
                   <div class="modal-body">
                     <address class="address__text">
                       MURUGAN COMPLEX,<br>
-                      KOVAIPUDUR,<br> 
-                      Coimbatore,<br> 
+                      KOVAIPUDUR,<br>
+                      Coimbatore,<br>
                       Tamil Nadu 641042
                     </address>
                   </div>
@@ -207,10 +243,10 @@
         <div class="card-body  text-center">
           <h5 class="card-title fs-4 fw-bold" id="card-title-medical">SRI AMBAL MEDICALS</h5>
           <p class="card-text" id="card-text2">
-            <ul class="list-group">
-              <li class="list-group-item">Medicines</li>
-              <li class="list-group-item">Mobile Recharge</li>
-            </ul>
+          <ul class="list-group">
+            <li class="list-group-item">Medicines</li>
+            <li class="list-group-item">Mobile Recharge</li>
+          </ul>
           </p>
           <!--button2-->
           <div class="card-buttons" id="card__buttons2">
@@ -236,8 +272,8 @@
                   style="background-image: linear-gradient(to right, rgba(255,0,0,0), rgb(255, 13, 0));">
                   <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLabel">New Ambal Medicals & Stationery</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                      <span aria-hidden="true">&times;</span>
+                    <button type="button" class="btn-close" data-dismiss="modal" aria-label="Close">
+
                     </button>
                   </div>
                   <div class="modal-body">
@@ -264,12 +300,12 @@
         <div class="card-body text-center">
           <h5 class="card-title fs-4 fw-bold" id="card-title-medical">New Ambal Medicals & Stationery</h5>
           <p class="card-text">
-            <ul class="list-group">
-              <li class="list-group-item">Medicines</li>
-              <li class="list-group-item">Stationeries</li>
-              <li class="list-group-item">E-Seva</li>
-              <li class="list-group-item">Mobile Accessories</li>
-            </ul>
+          <ul class="list-group">
+            <li class="list-group-item">Medicines</li>
+            <li class="list-group-item">Stationeries</li>
+            <li class="list-group-item">E-Seva</li>
+            <li class="list-group-item">Mobile Accessories</li>
+          </ul>
           </p>
           <!--button3-->
           <div class="card-buttons">
@@ -294,12 +330,12 @@
                   style="background-image: linear-gradient(to right, rgba(255,0,0,0), rgb(255, 13, 0));">
                   <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLabel">SRI AMBAL MEDICALS</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                      <span aria-hidden="true">&times;</span>
+                    <button type="button" class="btn-close" data-dismiss="modal" aria-label="Close">
+
                     </button>
                   </div>
                   <div class="modal-body">
-                    <address class="address__text"> 
+                    <address class="address__text">
                       Alagu Complex,<br>
                       Ponnamaravathi West,<br>
                       Tamil Nadu 622407
@@ -361,12 +397,12 @@
         <div class="card-body text-center">
           <h5 class="card-title fw-bold">SRI AMBAL TOWERS</h5>
           <p class="card-text" id="complex__cardbody__elements">
-            <ul class="list-group" >
-              <li class="list-group-item">Medicines</li>
-              <li class="list-group-item">Stationeries</li>
-              <li class="list-group-item">E-Seva</li>
-              <li class="list-group-item">Mobile Accessories</li>
-            </ul>
+          <ul class="list-group">
+            <li class="list-group-item">Medicines</li>
+            <li class="list-group-item">Stationeries</li>
+            <li class="list-group-item">E-Seva</li>
+            <li class="list-group-item">Mobile Accessories</li>
+          </ul>
           </p>
           <div class="card-buttons text-center">
             <a href="https://www.google.com/maps/place/SRI+AMBAL+Complex/@10.946805,76.93214,55m/data=!3m1!1e3!4m14!1m7!3m6!1s0x3ba85b930fceb417:0x3937b357c052e7a6!2sSRI+AMBAL+MEDICALS+%26+STATIONERY!8m2!3d10.9439342!4d76.9334793!16s%2Fg%2F1tgf66nc!3m5!1s0x3ba85bee89415f7d:0x91a23815b6b703e4!8m2!3d10.9469745!4d76.9324237!16s%2Fg%2F11tt5hj8xv?authuser=0&entry=ttu"
@@ -392,8 +428,8 @@
                   style="background-image: linear-gradient(to right, rgba(255,0,0,0), rgb(255, 13, 0));">
                   <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLabel">SRI AMBAL TOWERS</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                      <span aria-hidden="true">&times;</span>
+                    <button type="button" class="btn-close" data-dismiss="modal" aria-label="Close">
+
                     </button>
                   </div>
                   <div class="modal-body">
@@ -402,7 +438,7 @@
                       S - Block, Kovaipudur,<br>
                       Tamil Nadu,<br>
                       Coimbatore 641042.
-                  </address>
+                    </address>
                   </div>
                   <div class="modal-footer">
                     <button type="button" class="btn btn-dark border-success" data-dismiss="modal">Close</button>
@@ -419,11 +455,12 @@
     </section>
   </section>
   <script>
-         
+
     // Function to toggle the plus menu into minus
     function myFunction(x) {
-        x.classList.toggle("fa-minus-circle");
+      x.classList.toggle("fa-minus-circle");
     }
-</script>
+  </script>
 </body>
+
 </html>
