project completed.Good luck to the customer @MK Groups(Er.Gowtham)

--- a/index.html
+++ b/index.html
@@ -408,10 +408,10 @@
           <h5 class="card-title fw-bold">SRI AMBAL TOWERS</h5>
           <p class="card-text" id="complex__cardbody__elements">
           <ul class="list-group">
-            <li class="list-group-item">Medicines</li>
-            <li class="list-group-item">Stationeries</li>
-            <li class="list-group-item">E-Seva</li>
-            <li class="list-group-item">Mobile Accessories</li>
+            <li class="list-group-item">12 Rooms</li>
+            <li class="list-group-item">10*12 square feet</li>
+            <li class="list-group-item">Parking</li>
+            <li class="list-group-item">Highlight your competitive advantage</li>
           </ul>
           </p>
           <div class="card-buttons text-center">
@@ -466,12 +466,17 @@
           <img src="images/logo1.png" alt ="logo" class="footer__logo__image">
         </div>
         <hr/>
-        <p class="footer__contact1">Contact <i class="fa-solid fa-phone" style="color: #f2eb07;"></i></p>
-        <p class="footer__contact2">Gmail <i class="fa-solid fa-envelopes-bulk" style="color: #ffea00;"></i></p>
+        <p class="footer__contact1">
+          Contact 
+          <a href="tel:+919842650806"><i class="fa-solid fa-phone" style="color: #f2eb07;"></i></a>
+        </p>
+        <p class="footer__contact2">Gmail => mvmfamily20@gmail.com
+          <a href="mailto:mvmfamily20@gmail.com"><i class="fa-solid fa-envelopes-bulk" style="color: #ffea00;"></i></a>
+        </p>
         <hr/>
         <p class="footer__copyright">
           <span class="copyright">Copyright</span>
-          <i class="fa-solid fa-copyright fa-sm" style="color: #fbe704;"></i>          2023; Designed by <span class="author">ARUNKUMAR</span> 
+          <i class="fa-solid fa-copyright fa-sm" style="color: #fbe704;"></i>2023; Designed by <span class="author">ARUNKUMAR</span> 
         </p>
       </div>
     </section>
