Close button is added in about us modal

--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
           source for all your pharmaceutical and wellness needs. Your health is our priority, and we look forward to
           serving you and your family with care, compassion, and expertise.
         </p>
+        <button type="button" class="btn btn-success" data-dismiss="modal">Close</button>
       </div>
     </div>
   </div>
@@ -250,9 +251,9 @@
             <p class="card-text" id="card-text2">
             <ul class="list-group mt-5">
               <li class="list-group-item">Medicines</li>
-              <li class="list-group-item">Stationeries</li>
+              <li class="list-group-item">Mobile Recharge</li>
+              <li class="list-group-item">Television Recharge</li>
               <li class="list-group-item">E-Seva</li>
-              <li class="list-group-item">Mobile Accessories</li>
             </ul>
             </p>
             <!--button2-->
