linear gradient is changed

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                 aria-hidden="true">
                 <div class="modal-dialog" role="document">
                   <div class="modal-content"
-                    style="background-image: linear-gradient(to right, rgba(255,0,0,0), rgb(255, 13, 0));">
+                    style="background-image: linear-gradient(to right, rgb(250, 250, 250), rgb(255, 13, 0));">
                     <div class="modal-header">
                       <h5 class="modal-title pharmacymodal-title" id="exampleModalLabel">SRI AMBAL MEDICALS & STATIONERY
                       </h5>
@@ -337,7 +337,7 @@
                 aria-hidden="true">
                 <div class="modal-dialog" role="document">
                   <div class="modal-content"
-                    style="background-image: linear-gradient(to right, rgba(255,0,0,0), rgb(255, 13, 0));">
+                    style="background-image: linear-gradient(to right, rgb(246, 243, 243), rgb(255, 13, 0));">
                     <div class="modal-header">
                       <h5 class="modal-title" id="exampleModalLabel">SRI AMBAL MEDICALS</h5>
                       <button type="button" class="btn-close" data-dismiss="modal" aria-label="Close">
@@ -436,7 +436,7 @@
               aria-hidden="true">
               <div class="modal-dialog" role="document">
                 <div class="modal-content"
-                  style="background-image: linear-gradient(to right, rgba(255,0,0,0), rgb(255, 13, 0));">
+                  style="background-image: linear-gradient(to right, rgb(255, 253, 253), rgb(255, 13, 0));">
                   <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLabel">SRI AMBAL TOWERS</h5>
                     <button type="button" class="btn-close" data-dismiss="modal" aria-label="Close">
